Extend KHtmlView::print() to use a predefined QPrinter instance

This is required to share printer settings inside an application.

BUG:405011
FIXED-IN:5.64.0
Test Plan: compile on linux
Reviewed By: dfaure
Differential Revision: https://phabricator.kde.org/D19504