src/khtmlview.h
@@ -32,6 +32,7 @@
 #include <QScrollArea>
 
 class QPainter;
+class QPrinter;
 class QRect;
 template< typename T > class QVector;
 template <class T> class QStack;
@@ -198,6 +199,15 @@ public:
      * @param quick if true, fully automated printing, without print dialog
      */
     void print(bool quick = false);
+
+    /**
+     * Prints the HTML document.
+     * @param printer shared printer instance
+     * @param quick if true, fully automated printing, without print dialog
+     *
+     * @since 5.64
+     */
+    void print(QPrinter *printer, bool quick = false);
 
     /**
      * Display all accesskeys in small tooltips
